# django-react-template

./: .gitignore  README.md  docker-compose.yaml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/src/: db.sqlite3
backend/src/config/: settings.py  urls.py
backend/src/main/: admin.py  models.py  serializers.py  urls.py  views.py
backend/src/main/migrations/: 0001_initial.py  0002_remove_youtubevideo_video_type_and_more.py
frontend/: Dockerfile  README.md  package-lock.json
frontend/public/: index.html
frontend/src/: App.js  index.js
